Apply patch by Hamish, closing #7947 - thanks! * determine first day of week and draw calendarview accordingly * some cleanup: drop superfluous DateTimeView::Draw() * automatic whitespace cleanup

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42697 a95241bf-73f2-0310-859d-f6bbb57e9c96